Kubernetes/Upgrade-AB-AlwaysGood/ingress-version1.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dizertatie-ingress
spec:
  entrypoints:
    - web
  routes:
    - match: Headers(`User-Agent`,`Always-Good`)
      kind: Rule
      services:
        - name: dizertatie-service-version1
          port: 80
    - match: Headers(`User-Agent`,`Sometimes-Fail`)
      kind: Rule
      services:
        - name: dizertatie-service-version1
          port: 80
